--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+# 0.5.12
+- Added extra read stats to preprocess_chiapet_fastq.sh including anchor mapping
+
 # 0.5.11
 - Added >5kb PET count to preprocess_chiapet_set.log
 - Added NEWS
