--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# 0.5.18
+- Added --linker option
+- Removed within-sample anchor stats from log
+
 # 0.5.17
 - Don't remove output dir prior to pipeline start
 
