--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+# 0.5.19
+- Added --allow-missing-linker and --bwa-mode options
+
 # 0.5.18
 - Added --linker option
 - Removed within-sample anchor stats from log
